[package]
name = "sitemap-crawl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
flate2 = "1"
scraper = "0.22"
url = "2"
futures = "0.3"
rust_xlsxwriter = "0.93"
chrono = "0.4"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
rand = "0.9"
indicatif = "0.17"

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization (cross-crate inlining)
codegen-units = 1     # single codegen unit for best optimization
panic = "abort"       # smaller binary, no unwinding
strip = true          # strip debug symbols
